fixed z-index issue on winning screen

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body {
     right: 900px;
     bottom: 0;
     left: 0;
-    z-index: 1;
+    z-index: 3;
 }
 
 .winningSpeechBubble {
@@ -89,6 +89,7 @@ body {
     right: 380px;
     bottom: 0;
     left: 0;
+    z-index: 3;
 }
 
 .winningSpeechText {
@@ -102,6 +103,7 @@ body {
     right: 343px;
     bottom: 0;
     left: 0;
+    z-index: 3;
 }
 
 .yosemiteSam_losing {
